--- a/index.html
+++ b/index.html
@@ -112,8 +112,21 @@
                 <!-- Google - SWE -->
                 <div class="mb-12 ml-8">
                     <div class="absolute -left-4 mt-1.5 h-7 w-7 rounded-full bg-warm-accent shadow-lg"></div>
-                    <p class="text-sm text-gray-500">June 2023 – Present</p>
-                    <h3 class="text-2xl font-semibold">Software Engineer</h3>
+                    <p class="text-sm text-gray-500">Jan 2025 – Present</p>
+                    <h3 class="text-2xl font-semibold">Software Engineer III</h3>
+                    <p class="text-lg text-gray-700 mb-2">Google, New York, NY</p>
+                    <ul class="list-disc list-inside space-y-2 text-gray-600">
+                        <li>Software Engineer on the TrueTime team, which provides globally consistent time bounds used by distributed systems.</li>
+                        <li>Leading initiatives to improve time-serving accuracy and reduce end-to-end latency at massive scale, focusing on tail latency (p95/p99) and reliability SLOs.</li>
+                        <li>Implemented performance optimizations across the request pipeline (e.g., batching, caching, and RPC-level improvements) to reduce overhead under peak load.</li>
+                        <li>Strengthened observability with dashboards/alerts for accuracy indicators, latency regressions, and anomalies; improved safe rollout practices with canarying.</li>
+                        <li>Improved resiliency with fault-tolerant behavior and degradation strategies to keep serving stable during partial failures.</li>
+                    </ul>
+                </div>
+                <div class="mb-12 ml-8">
+                    <div class="absolute -left-4 mt-1.5 h-7 w-7 rounded-full bg-warm-accent shadow-lg"></div>
+                    <p class="text-sm text-gray-500">June 2023 – Jan 2025</p>
+                    <h3 class="text-2xl font-semibold">Software Engineer II</h3>
                     <p class="text-lg text-gray-700 mb-2">Google, New York, NY</p>
                     <ul class="list-disc list-inside space-y-2 text-gray-600">
                         <li>Working in the TrueTime team, which manages critical time-keeping across Google's global production systems and underpins distributed services such as Spanner and Chubby.</li>
@@ -201,8 +214,21 @@
         <section id="publications" class="mb-16 scroll-mt-20">
             <h2 class="text-3xl font-bold mb-8 text-warm-accent border-b-2 border-warm-accent pb-2">Publications</h2>
             <div class="space-y-6">
+                      <div class="mt-6 space-y-4">
                 <div class="bg-warm-secondary p-6 rounded-lg shadow">
-                    <p class="text-lg text-gray-700">Priniski, J.H., Linford, B., Krishna, S., Morstatter, F., Brantingham, J., & Lu, H. (2024). "Online network topology shapes personal narratives and hashtag generation." <em class="text-gray-600">arXiv preprint arXiv:2405.20457.</em></p>
+                  <p class="text-lg text-gray-700">
+                    Priniski, J. H., Linford, B., Hirschmann, A., Venumuddala, S. K., Morstatter, F., Rodriguez, N., ... & Lu, H. (2026). Network structure shapes consensus dynamics through individual decisions. Proceedings of the National Academy of Sciences of the United States of America, 123(2), e2520483123.
+                    <a href="https://doi.org/10.1073/pnas.2520483123" class="text-warm-accent hover:underline" target="_blank" rel="noreferrer">
+                      https://doi.org/10.1073/pnas.2520483123
+                    </a>
+                  </p>
+                </div>
+                <div class="bg-warm-secondary p-6 rounded-lg shadow">
+                    <p class="text-lg text-gray-700">Priniski, H., Linford, B., Krishna, S., Morstatter, F., Brantingham, J., & Lu, H. (2024). Online network topology shapes personal narratives and hashtag generation. Proceedings of the Annual Meeting of the Cognitive Science Society, 46. Retrieved from "
+                    <a href="https://escholarship.org/uc/item/6pv4z0j5" class="text-warm-accent hover:underline" target="_blank" rel="noreferrer">
+                      https://escholarship.org/uc/item/6pv4z0j5
+                    </a>
+                    </p>
                 </div>
                 <div class="bg-warm-secondary p-6 rounded-lg shadow">
                     <p class="text-lg text-gray-700">Venumuddala, S.K., & Kalyani, A.N. (2019). "Prediction of cardiac arrhythmia using artificial neural networks." <em class="text-gray-600">International Journal of Recent Technology and Engineering (IJRTE), 8(154).</em></p>
